WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213257
Fix for accessibility/textarea-selected-text-range.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=213257
Summary
Fix for accessibility/textarea-selected-text-range.html in isolated tree mode.
Andres Gonzalez
Reported
2020-06-16 13:31:54 PDT
Fix for accessibility/textarea-selected-text-range.html in isolated tree mode.
Attachments
Patch
(8.76 KB, patch)
2020-06-16 13:47 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-06-16 13:47:07 PDT
Created
attachment 402036
[details]
Patch
EWS
Comment 2
2020-06-16 15:36:46 PDT
Committed
r263120
: <
https://trac.webkit.org/changeset/263120
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402036
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-16 15:37:15 PDT
<
rdar://problem/64424799
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug