Fix for accessibility/textarea-selected-text-range.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=213257

Reviewed by Chris Fleizach.

Source/WebCore:

accessibility/textarea-selected-text-range.html.

Implementation of AXIsolatedObject::selectedTextRange.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::selectedTextRange const):
* accessibility/isolatedtree/AXIsolatedObject.h:

Tools:

* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::setAttributeValue):
(WTR::AccessibilityUIElement::selectedTextRange): Dispatch call into
WebAccessibilityWrapper onto AX secondary thread to simulate isolated
tree mode.

LayoutTests:

- Re-write this test so that it can pass in both isolated tree mode on
and off.
- Replaced shouldBecomeEqual with setTimeout follow by debug because
shouldBecomeEqual causes a thread lock on isolated tree mode.

* accessibility/textarea-selected-text-range-expected.txt:
* accessibility/textarea-selected-text-range.html:


Canonical link: https://commits.webkit.org/226052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263120 268f45cc-cd09-0410-ab3c-d52691b4dbfc